# sop2022-23_26c

./: .gitignore
s25944-KarolSielski/: pamietnik.txt
s25944-KarolSielski/Zajecia3/: cw1.1.txt  cw1.2.txt  cw1.3.txt  cw1.4.txt  cw2.1.txt  cw2.2.txt  cw2.3.txt  cw2.4.txt  cw2.5.txt  cw3.1.txt  cw3.2.txt  text.txt  zadDom.txt
s25944-KarolSielski/Zajęcia 1/: instalacja_debian_linux.txt
s26974-MalgorzataCiesielska/: pamietnik.txt
s26974-MalgorzataCiesielska/zajecia2/: zadanie2.txt
s26974-MalgorzataCiesielska/zajecia3/: domowe.txt  zad1_1.txt  zad1_2.txt  zad1_3.txt  zad1_4.txt  zad2_1.txt  zad2_2.txt  zad2_3.txt  zad2_4.txt  zad2_5.txt  zad3_1.txt  zad3_2.txt
s26974-MalgorzataCiesielska/zajecia4/: dom1.c  dom2.c  dom3.c  zad1_1.c  zad1_2.c  zad1_3.c  zad_IO1.c  zad_IO2.c  zad_wsk.c  zad_wsk2.c
s26974-MalgorzataCiesielska/zajecia5/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c
s27085-KonradFijalkowski/: pamietnik.txt
s27085-KonradFijalkowski/zajecia2/: zadanie1.txt  zadanie5a.txt  zadanie5b.txt  zadanie6.txt
s27085-KonradFijalkowski/zajecia4/: choinka.c
s27274-PatrykOlbrys/: pamietnik.txt
s27288-MateuszLisewski/: pamietnik.txt
s27292-DanielBielinski/: pamietnik.txt
s27447ŁukaszOgorzałek/: pamietnik.txt
s27459-StefanKarczewski/: pamietnik.txt
s28840-NikodemRabulinski/: .gitignore  README.md  flake.nix  formatter.sh  globber.sh  pamietnik.txt
s28840-NikodemRabulinski/zajecia4/: meson.build  zadanie1_1.c  zadanie1_2.c  zadanie1_3.c  zadanie_wskaz.c  zadaniedom_1.c  zadaniedom_3.c  zadanieio_1.c  zadanieio_2.c
(+226 files in other folders)
